Frankbelford/uatv1ba/force-app/main/default/objects/Survey__c/fields/Chat_Transcript_ID__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript_ID__c</fullName>
    <label>Chat Transcript ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>