Frankbelford/uatv1ba/force-app/main/default/objects/Survey__c/fields/Chat_Transcript_URL__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript_URL__c</fullName>
    <formula>$Label.System_URL +  Chat_Transcript_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>URL link of the Chat Transcript record</inlineHelpText>
    <label>Chat Transcript URL</label>
    <type>Text</type>
</CustomField>