Frankbelford/uatv1ba/force-app/main/default/objects/Survey__c/fields/Consultant_Review__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Review__c</fullName>
    <inlineHelpText>Follow up notes from consultant regarding the feedback</inlineHelpText>
    <label>Follow Up Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>