Frankbelford/uatv1ba/force-app/main/default/objects/Survey__c/fields/Date_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Response_Received__c</fullName>
    <label>Date Response Received</label>
    <type>DateTime</type>
</CustomField>