Frankbelford/uatv1ba/force-app/main/default/objects/Survey__c/fields/Did_you_find_Chat_Service_Useful__c.field-meta.xml
<CustomField>
    <fullName>Did_you_find_Chat_Service_Useful__c</fullName>
    <label>Were You Satisfied?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>