Frankbelford/uatv1ba/force-app/main/default/objects/Survey__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Open - default status
Sent - survey sent
Completed - survey completed</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>