Frankbelford/uatv1ba/force-app/main/default/objects/Survey__c/fields/Survey_Channel__c.field-meta.xml
<CustomField>
    <fullName>Survey_Channel__c</fullName>
    <label>Survey Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bot</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>